added diffs for DOL-37

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -29,6 +29,8 @@
 %\newcommand{\bc}[1]{~\\{\color{violet}\large \hrulefill {\normalfont{JIRA DOL-{}#1}} \hrulefill\\}  }
 \newcommand{\bc}[1]{~\\{\color{violet}\large \hrulefill \href{http://issues.omg.org/browse/DOL-#1}{\normalfont{JIRA DOL-{}#1}} \hrulefill\\}  }
 \newcommand{\ec}[0]{~\\{{\color{violet}\large \hrulefill {\normalfont{end}} \hrulefill\\}  }}
+\newcommand{\bcnew}[1]{~\\{\color{red}\large \hrulefill \href{http://issues.omg.org/browse/DOL-#1}{\normalfont{JIRA DOL-{}#1}} \hrulefill\\}  }
+\newcommand{\ecnew}[0]{~\\{{\color{red}\large \hrulefill {\normalfont{end}} \hrulefill\\}  }}
 
 %% Cleaning up things that isov2 gets wrong
 \makeatletter
@@ -1625,7 +1627,7 @@ plus non-logical annotations\index{annotation}.}
   \end{note}
 
  
-\bc{4} 
+\bc{4, 37} 
 \termdefinition{ontology}{\DIFdel{\termref{logical theory} that is used as a
    shard conceptualization}
 \DIFadd{explicit and shared formal representation of the entities and their interrelationships of a given domain of discourse or of fundamental notions}}
@@ -2928,11 +2930,14 @@ Annex \ref{a:queries} discusses an extension of \DOL{} by queries. This extensio
 to support query languages (e.g., SQL or SPARQL) in \DOL{} and to enable query related constructs
 for OMS in other DOL conformant languages (\emph{informative}). 
 
-\medskip \noindent 
-Annex \ref{a:uses} provides of \DOL texts, which provide examples for all \DOL constructs, which 
+\medskip \noindent
+\bcnew{37}
+Annex \ref{a:uses} provides \DIFdelbegin \DIFdel{of }%DIFDELCMD < \DOL %%%
+\DIFdel{texts, which provide }\DIFdelend \DIFaddbegin \DIFadd{textual }\DIFaddend examples for all \DOL constructs, which 
 are specified in the abstract syntax 
 (\emph{informative}).
 %Annex \ref{a:use-cases} sketches scenarios that outline how \DOL is intended to be applied  (\emph{informative}). For  each scenario,  a brief description  is provided, and the utilized \DOL features as well as the status of its implementation are listed.
+\ecnew
 
 
 \medskip \noindent 
@@ -3384,10 +3389,11 @@ and thus enable formal verification of the translation from Dublin Core to PROV.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sclause{Use Case Onto-6: Maintaining Different Versions of an Ontology 
-in Languages with Different Expressivity}
-Often is useful to maintain different versions of an ontology within languages, which differ in 
+  in Languages with Different Expressivity}
+\bcnew{37}
+Often \DIFaddbegin \DIFadd{it }\DIFaddend is useful to maintain different versions of an ontology within languages, which differ in 
  their expressivity. 
-
+\ecnew
  
 For example,  DOLCE is a foundational ontology that has primarily been formalized in
  the first-order logic 
@@ -3727,9 +3733,12 @@ $$\xymatrix{
 \sclause{Use Case Model-1: Consistency Among UML Models of Different Types}
 \label{model-1}
 
+\pagebreak
+\bcnew{37}
 A typical UML model involves models of different types. Such UML models may have intrinsic errors because models of different types may specify conflicting 
-requirements. Typical questions that arise in this context are ask for
+requirements. Typical questions that arise in this context \DIFdelbegin \DIFdel{are }\DIFdelend ask for
 semantic consistency, e.g.,
+\ecnew
 
  \begin{itemize} 
 \item whether the multiplicities in a class model are semantically consistent with each other;
@@ -5885,6 +5894,8 @@ with
 
 Table~\ref{tab:key-signs} following key signs are reserved, and are not available for use as complete identifiers.  Key signs that are outside of the Basic Latin subset of Unicode may alternatively be encoded as a sequence of Basic Latin characters.
 
+
+\bcnew{37}
 \newcolumntype{T}{>{\ttfamily}{l}}
 \ctable[
   caption={Key Signs},
@@ -5900,6 +5911,9 @@ Table~\ref{tab:key-signs} following key signs are reserved, and are not availabl
   \rmfamily ↦ & U+21A6 RIGHTWARDS ARROW FROM BAR & |-> \NN
   \rmfamily → & U+2192 RIGHTWARDS ARROW & -> \NN
 }
+
+[diff note: Table 2 now positioned in 9.8.1.2, not in the middle of 9.8.1.1.]
+\ecnew
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -11193,10 +11207,11 @@ The TPTP text syntax is text conformant with \DOL.
 
 \sclause{Semantic Conformance of TPTP With \DOL}
 
-In \cite{GoguenBurstall92}, many-sorted first has been formalized as
+\bcnew{37}
+In \cite{GoguenBurstall92}, many-sorted \DIFdelbegin \DIFdel{first }\DIFdelend \DIFaddbegin \DIFadd{first-order logic }\DIFaddend has been formalized as
 an institution; the single-sorted sublogic (using only a fixed set of
 sorts $\{s\}$ is isomorphic to unsorted first-order logic).
-
+\ecnew
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
