added diffs for DOL-40

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -10508,9 +10508,15 @@ table:\footnote{\cite[p.~34]{uml-2.5}.}
 \end{tabular}
 \end{quotation}
 %
+\bcnew{40}
 The default is ``not ordered'' and
-``unique''.\footnote{\cite[p.~96]{uml-2.4.1-super}; there does not seem to be
-  default in UML 2.5.}
+``unique''.\footnote{\DIFdelbegin \DIFdel{\mbox{%DIFAUXCMD
+\cite[p.~96]{uml-2.4.1-super}}%DIFAUXCMD
+; there does not seem to be
+  default in UML 2.5}\DIFdelend \DIFaddbegin \DIFadd{\mbox{%DIFAUXCMD
+\cite[p.~33]{uml-2.5}}%DIFAUXCMD
+}\DIFaddend .}
+\ecnew
 
 For a class/data type $c \in C$ of a class/data type-hierarchy
 $(C, {\leq_C})$ and a collection type constructor
