added diffs for DOL-43

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -4941,6 +4941,11 @@ Reduction          ::= 'hide' LogicReduction* SymbolList
 LogicReduction     ::= 'along' OMSLanguageTranslation
 SymbolList         ::= Symbol @\DIFadd{(}@ ',' Symbol @\DIFadd{)}@*
 SymbolMap          ::= GeneralSymbolMapItem @\DIFadd{(}@ ',' GeneralSymbolMapItem @\DIFadd{)}@*
+\end{lstlisting}
+\ec
+
+\lstset{escapeinside = {*@}{@*}}
+\begin{lstlisting}[language=ebnf,mathescape]
 Extraction         ::= 'extract' InterfaceSignature
                      | 'remove' InterfaceSignature
 Approximation      ::= 'forget' InterfaceSignature ['keep' LogicRef]
@@ -4954,6 +4959,11 @@ ExtensionOMS       ::= [ExtConservativityStrength]
                        ExtendingOMS
 ConservativityStrength ::= Conservative | '%mono' | '%wdef' | '%def'
 ExtConservativityStrength ::= ConservativityStrength | '%implied'
+\end{lstlisting}
+
+\bcnew{43}
+\lstset{escapeinside = {@}{@}}
+\begin{lstlisting}[language=ebnf,mathescape]
 Conservative       ::= '%cons'
                      | '%ccons'
                      | '%mcons'
@@ -4961,8 +4971,14 @@ Conservative       ::= '%cons'
                      | '%notmcons'
                      | '%consistent'
                      | '%inconsistent'
-                     | '%satifsiable'
+                     | '@\DIFdel{satifsiable}\DIFadd{satisfiable}@'
                      | '%unsatisfiable'
+\end{lstlisting}
+\ecnew
+
+\bc{92}
+\lstset{escapeinside = {*@}{@*}}
+\begin{lstlisting}[language=ebnf,mathescape]
 InterfaceSignature ::= SymbolList
 ImportName         ::= '%@\DIFadd{(}@' IRI '@\DIFadd{)}@%'
 ExtensionName      ::= '%@\DIFadd{(}@' IRI '@\DIFadd{)}@%'
