started to add missing bits of DOL-82

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -1560,12 +1560,8 @@ Reference.  W3C Recommendation, 18 August \DIFdelbegin \DIFdel{2009}\DIFdelend \
 
 \begin{definitions}
 \bc{82}
-  \termdefinitionLight{Distributed Ontology, Modeling and Specification Language \synonym\DOL} \DIFdelbegin %DIFDELCMD < \index{\dolindex ! definition}{unified metalanguage for the structured and heterogeneous expression of ontologies, specifications, and MDE models, using  \termref{DOL libraries}\index{library} of \termref{OMS}, OMS mappings and OMS networks\index{OMS network}, 
-%DIFDELCMD <   whose syntax and semantics are specified in this \IS{}.}
-%DIFDELCMD < %%%
-\DIFdelend \DIFaddbegin \index{\dolindex ! definition}{unified metalanguage for the structured and heterogeneous expression of ontologies, specifications, and models, using  \termref{DOL libraries}\index{library} of \termref{OMS}, OMS mappings and OMS networks\index{OMS network}, 
-  whose syntax and semantics are specified in this \IS{}.}
-\DIFaddend %
+  \termdefinitionLight{Distributed Ontology, Modeling and Specification Language \synonym\DOL} unified metalanguage for the structured and heterogeneous expression of ontologies, specifications, and \DIFdel{MDE} models, using  \termref{DOL libraries}\index{library} of \termref{OMS}, OMS mappings and OMS networks\index{OMS network}, 
+  whose syntax and semantics are specified in this \IS{}.
 \ec
 
 % \begin{note}
@@ -1779,12 +1775,9 @@ of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
 
   
 \bc{82}
-\DIFdelbegin %DIFDELCMD < \termdefinition{sentence}{term that is either true or false in a given \termref{model}, i.e.\ which is assigned a truth value in this \termref{model}.}
-%DIFDELCMD <   %%%
-\DIFdelend \DIFaddbegin \termdefinition{sentence}{term that is either true or false in a given \termref{realization}, i.e.\ which is assigned a truth value in this \termref{realization}.}
-  \DIFaddend \begin{note}
-In a \DIFdelbegin %DIFDELCMD < \termref{model}%%%
-\DIFdelend \DIFaddbegin \termref{realization}\DIFaddend , on the one hand, a sentence is always true or false. In an \termref{OMS}, on the
+\termdefinition{sentence}{term that is either true or false in a given \DIFdel{model}\DIFadd{realization}, i.e.\ which is assigned a truth value in this \DIFdel{model}\DIFadd{realization}.}
+\begin{note}
+In a \DIFdel{model} \DIFadd{realization}, on the one hand, a sentence is always true or false. In an \termref{OMS}, on the
 other hand, a sentence can have several logical statuses. For example, a sentence can be:  an
 axiom, if postulated to be true;
 a theorem, if proven from other axioms and theorems; or a conjecture, if expecting to be proven 
