continued with missing bits of DOL-82

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -1559,10 +1559,10 @@ Reference.  W3C Recommendation, 18 August \DIFdelbegin \DIFdel{2009}\DIFdelend \
 \sclause{Distributed Ontology, Modeling and Specification Language}
 
 \begin{definitions}
-\bc{82}
+\bcnew{82}
   \termdefinitionLight{Distributed Ontology, Modeling and Specification Language \synonym\DOL} unified metalanguage for the structured and heterogeneous expression of ontologies, specifications, and \DIFdel{MDE} models, using  \termref{DOL libraries}\index{library} of \termref{OMS}, OMS mappings and OMS networks\index{OMS network}, 
   whose syntax and semantics are specified in this \IS{}.
-\ec
+\ecnew
 
 % \begin{note}
 %  When viewed as an \termref{OMS language}, \DOL has \termref{OMS} as its
@@ -1774,7 +1774,7 @@ of non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
   \end{note}
 
   
-\bc{82}
+\bcnew{82}
 \termdefinition{sentence}{term that is either true or false in a given \DIFdel{model}\DIFadd{realization}, i.e.\ which is assigned a truth value in this \DIFdel{model}\DIFadd{realization}.}
 \begin{note}
 In a \DIFdel{model} \DIFadd{realization}, on the one hand, a sentence is always true or false. In an \termref{OMS}, on the
@@ -1783,7 +1783,7 @@ axiom, if postulated to be true;
 a theorem, if proven from other axioms and theorems; or a conjecture, if expecting to be proven 
 from  other axioms and theorems.
   \end{note}
-  \ec
+  \ecnew
 
   \begin{note}
   A sentence can conform to one or more signatures (namely those signatures
@@ -1800,12 +1800,9 @@ from  other axioms and theorems.
   The notion of sentence depends on the \termref{OMS language} or \termref{logic}. 
   \end{note}
 
-\bc{82}
-  \DIFdelbegin %DIFDELCMD < \termdefinition{satisfaction relation}{relation between models and sentences indicating which sentences hold true in the model.}
-%DIFDELCMD <   %%%
-\DIFdelend \DIFaddbegin \termdefinition{satisfaction relation}{relation between realizations and sentences indicating which sentences hold true in the realization.}
-\DIFaddend
-\ec
+\bcnew{82}
+\termdefinition{satisfaction relation}{relation between \DIFdel{models}\DIFadd{realizations} and sentences indicating which sentences hold true in the \DIFdel{model}\DIFadd{realization}.}
+\ecnew
 
 \begin{note}
   The satisfaction relation depends on the \termref{OMS language} or \termref{logic}. 
@@ -2043,12 +2040,9 @@ However, this does not work for logics that e.g.\ do not feature a $\mathit{fals
 \end{note}
 
 
-\bc{82}
-   \DIFdelbegin %DIFDELCMD < \termdefinition{satisfiability}{property of an \termref{OMS} expressing
-%DIFDELCMD < that it is \termref{satisfied} by least one \termref{model}.}
-%DIFDELCMD < %%%
-\DIFdelend \DIFaddbegin \termdefinition{satisfiability}{property of an \termref{OMS} expressing
-that it is \termref{satisfied} by least one \termref{realization}.}
+\bcnew{82}
+\termdefinition{satisfiability}{property of an \termref{OMS} expressing
+ that it is \termref{satisfied} by least one  \DIFdel{model}\DIFadd{realization}.}
 \DIFaddend \begin{note}
 The opposite is unsatisfiability.
 \end{note}
@@ -2057,11 +2051,8 @@ Any satisfiable OMS is \termref{consistent}, but there are some
 \termref{logics} where the converse does not hold.
 \end{note}
 
-\DIFdelbegin %DIFDELCMD < \termdefinition{model finding}{process that finds \termref{models} of an \termref{OMS} and thus proves it to be \termref{satisfiable}.}	
-%DIFDELCMD < %%%
-\DIFdelend \DIFaddbegin \termdefinition{model finding}{process that finds \termref{realizations} (models) of an \termref{OMS} and thus proves it to be \termref{satisfiable}.}	
-\DIFaddend 
-\ec
+\termdefinition{model finding}{process that finds \DIFdel{models}\DIFadd{{realizations} (models)} of an \termref{OMS} and thus proves it to be \termref{satisfiable}.}	
+\ecnew
 
   \termdefinition{model finder}{\termref{tool} that implements \termref{model finding}.}
 
@@ -2161,17 +2152,15 @@ If a symbol is removed, all axioms containing that symbol are removed, too.
   \end{note}
 
   
-\bc{82}
-\DIFdelbegin %DIFDELCMD < \termdefinition{cofreeness}{special type of closure, restriction of \termref{models} to those that are cofree (with respect to the local environment).}
-%DIFDELCMD <   %%%
-\DIFdelend \DIFaddbegin \termdefinition{cofreeness}{special type of closure, restriction of \termref{realizations} to those that are cofree (with respect to the local environment).}
-  \DIFaddend \begin{note}
+\bcnew{82}
+\termdefinition{cofreeness}{special type of closure, restriction of \DIFdel{models}\DIFadd{realizations} to those that are cofree (with respect to the local environment).}
+\begin{note}
     In first-order logic (and similar logics), cofreeness means maximal
     interpretation of predicates and equality being observable
     equivalence. Cofreeness can be used for the specification of
     coinductive datatypes like infinite lists and streams.
   \end{note}
-\ec
+\ecnew
 
   \termdefinition{combination}{structured OMS expressing the aggregation of all the OMS in an \termref{OMS network}, where non-logical symbols are shared according to the OMS mappings in the OMS network.}
 \begin{example}
@@ -5923,7 +5912,7 @@ Table~\ref{tab:key-signs} following key signs are reserved, and are not availabl
   \rmfamily → & U+2192 RIGHTWARDS ARROW & -> \NN
 }
 
-[diff note: Table 2 now positioned in 9.8.1.2, not in the middle of 9.8.1.1.]
+\DIFadd{[diff note: Table 2 now positioned in 9.8.1.2, not in the middle of 9.8.1.1.]}
 \ecnew
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -6307,7 +6296,8 @@ with $\beta_{\Sigma_2}(M'_2)=M_2$
 and $M'_2\forget{\Phi(\sigma)}=M'_1$;
 \ec
 
- \item \bc{82}
+\item \bc{82}
+  \DIFadd{[diff note: only text of footnote has changed]}
 a \emph{subinstitution comorphism} if $\Phi$ is
 an embedding, each $\alpha_\Sigma$ is injective and each $\beta_\Sigma$
 is bijective\footnote{An isomorphism if \DIFdelbegin \DIFdel{model }\DIFdelend morphisms \DIFaddbegin \DIFadd{of realizations }\DIFaddend are taken into
@@ -10520,6 +10510,7 @@ table:\footnote{\cite[p.~34]{uml-2.5}.}
 \end{quotation}
 %
 \bcnew{40}
+\DIFadd{[diff note: only text of footnote has changed]}
 The default is ``not ordered'' and
 ``unique''.\footnote{\DIFdelbegin \DIFdel{\mbox{%DIFAUXCMD
 \cite[p.~96]{uml-2.4.1-super}}%DIFAUXCMD
