weird crossreference to  bibliography removed

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2756,7 +2756,7 @@ linked-data compliant IRI scheme used in one of these tools
 (\emph{informative}).
 
 \medskip \noindent 
-The bibliography contains \ref{a:bibliography} references to the literature that is cited in this document
+The bibliography contains references to the literature that is cited in this document
 (\emph{informative}).
 
 
