--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -1663,7 +1663,7 @@ of logic (model theory). \DIFaddbegin \DIFadd{In this document, we use the term 
 \ec
 
 \bc{4}
-{\DIFdelbegin \DIFdel{basic OMS or structured OMS}\DIFdelend \DIFaddbegin \DIFadd{collection of expressions (like non-logical symbols, sentences and structuring elements) in a given OMS language (or several such languages) and denoting a class of models and, possibly, a logical theory}\DIFaddend .}
+{\DIFdelbegin \DIFdel{basic OMS or structured OMS}\DIFdelend \DIFaddbegin \DIFadd{collection of expressions (like non-logical symbols, sentences and structuring elements) in a given OMS language (or several such languages) and denoting a class of realizations and, possibly, a logical theory}\DIFaddend .}
 \ec
 
 \begin{note}
@@ -1841,6 +1841,7 @@ demonstrated to be a \termref{logical consequence} of the axioms.}
 
 
 \termdefinition{tool}{software for processing \termref{\DOL libraries} and \termref{OMS}.}
+
 \termdefinition{theorem proving}{process of demonstraing that a \termref{sentence} (or \termref{OMS}) is the \termref{logical consequence} of some OMS.}
 
   \termdefinition{theorem prover}{\termref{tool} implementing \termref{theorem proving}.}
@@ -2108,10 +2109,10 @@ If a symbol is removed, all axioms containing that symbol are removed, too.
 
 \termdefinition{closed world assumption}{assumption that facts whose status is unknown are true.}
 
-\bc{82}
+\bc{822}
 \termdefinitionLight{\termref{closure}\synonym circumscription\index{circumscription|see {closure}}}
 {structured OMS expressing a variant of the \termref{closed world assumption} by restricting the \DIFdel{models}%%%
- \DIFadd{realizations} \index{model} to those that are minimal, maximal, free or cofree (with respect to the local environment).}
+ \DIFadd{realizations} \index{realization} to those that are minimal, maximal, free or cofree (with respect to the local environment).}
 \ec
 
 \begin{note}
@@ -2425,9 +2426,9 @@ that targets specific applications or reasoning methods.}
 \sclause{Logic}\label{c:term-logic}
 
 \begin{definitions}
-\bc{82}
+\bc{822}
  \termdefinition{logic}{specification of valid reasoning that comprises signatures\index{signature}  (user defined vocabularies), 
- \DIFdel{models}\DIFadd{realizations} \index{model}  (interpretations of these),
+ \DIFdel{models}\DIFadd{realizations} \index{realization}  (interpretations of these),
 sentences\index{sentence}  (constraints on realizations),
  and a \termref{satisfaction relation} between realizations and sentences\index{sentence}.}
 \ec
@@ -2495,7 +2496,7 @@ and \termref{satisfaction}.
 \bc{82}
  \termdefinition{logic translation}{\termref{translation} of a source
     \termref{logic} into a target \termref{logic} (mapping
-    signatures\index{signature}, sentences\index{sentence} and \DIFdel{models}\DIFadd{realizations}\index{model})
+    signatures\index{signature}, sentences\index{sentence} and \DIFdel{models}\DIFadd{realizations}\index{realization})
     that keeps or encodes the logical content of \termref{OMS}.}
 
  \termdefinition{logic reduction}{\termref{reduction} of a source \termref{logic}
@@ -4769,7 +4770,7 @@ keywords (see clause~\ref{c:keywords}); otherwise, it needs to be enclosed in cu
   the local environment are fixed.\DIFaddbegin \footnote
   {\bc{90}\DIFadd{Note that if applied to algebraic signatures (sorts and operation symbols),
     minimization can be used to express reachability (i.e. term-generatedness)
-    of algebraic (first-order) models.}\ec}
+    of algebraic (first-order) realizations.}\ec}
   \DIFaddend Variants of closure are
   minimization, maximization, freeness (minimizing also data
   sets and equalities on these,  which enables the inductive
@@ -6038,47 +6039,54 @@ modeling and specification languages like OWL, Common Logic, or \CASL
 come with a model-theoretic semantics, or (like UML class models)
 can be equipped with one.
 
- An abstract notion of logical system is given by  the notion of
+\bcnew{822}
+An abstract notion of logical system is given by  the notion of
 satisfaction system \cite{carnielli2008analysis}, called `rooms' in
 the terminology of \cite{CharPar}. They capture the Tarskian notion of
-satisfaction of a sentence in a model in an abstract way.
-%For the semantics of minimization, we assume a pre-order on models.
+satisfaction of a sentence in a \DIFdelbegin \DIFdel{model }\DIFdelend \DIFaddbegin \DIFadd{realization }\DIFaddend in an abstract way.
+%DIF < For the semantics of minimization, we assume a pre-order on models.
+%DIF > For the semantics of minimization, we assume a pre-order on realizations.
 
 \begin{definition}\label{def:room}
 A triple $\cR=(\mathit{Sen},{\cM,\models)}$  is called a \defsty{satisfaction system}, or \defsty{room}, if $\cR$ consists of
  \begin{itemize} 
 \item a set $\mathit{Sen}$ of \defsty{sentences},
 \item a class
-%\footnote{If we want to take model morphisms into account, 
-%a \emph{category} of models needs to be given here. However, this is important only
+%DIF < \footnote{If we want to take model morphisms into account, 
+%DIF < a \emph{category} of models needs to be given here. However, this is important only
+%DIF > \footnote{If we want to take realization morphisms into account, 
+%DIF > a \emph{category} of realizations needs to be given here. However, this is important only
 %for the \syntax{\%mono} annotation.}
-$\cM$ of \defsty{models}, and
+$\cM$ of \DIFdelbegin %DIFDELCMD < \defsty{models}%%%
+\DIFdelend \DIFaddbegin \defsty{realizations}\DIFaddend , and
 \item a binary relation
 ${\models} \subseteq \cM \times \mathit{Sen}$, called the \defsty{satisfaction relation}.\quad\qed
  \end{itemize} 
 \end{definition}
+\ecnew
 
 \eat{
 Two sentences are \emph{semantically
 equivalent}, written $\varphi_1\bimodels\varphi_2$, if they are satisfied by
-the same models.  Two models are \emph{elementary equivalent}, written
+the same realizations.  Two realizations are \emph{elementary equivalent}, written
 $M_1\equiv M_2$, if they satisfy the same sentences.  A room is
 \emph{compact\/} iff $\Delta\models_\Sigma\varphi$ implies
 $\Delta'\models_\Sigma\varphi$ for some finite subset $\Delta'$ of $\Delta$.
 }
 
+\bcnew{822}
 While this signature-free treatment enjoys simplicity and is wide-spread in the literature, many 
 concepts and definitions found in logics, e.g.\ the notion of a conservative extension, involve the
 \emph{vocabulary} or \emph{signature} $\Sigma$ \label{vocabulary} used in sentences.  Signatures 
 can be extended with new non-logical symbols, or some of these symbols can be renamed; abstractly, 
 this is captured using signature morphisms. Moreover,  morphisms
-between models are also needed in order to give a semantics to \syntax{minimize},
+between \DIFdelbegin \DIFdel{models }\DIFdelend \DIFaddbegin \DIFadd{realizations }\DIFaddend are also needed in order to give a semantics to \syntax{minimize},
 \syntax{maximize}, \syntax{free} and \syntax{cofree}---these constructs
-use model morphisms to select certain models, e.g.\ the minimal ones.
+use \DIFdelbegin \DIFdel{model }\DIFdelend \DIFaddbegin \DIFadd{realization }\DIFaddend morphisms to select certain \DIFdelbegin \DIFdel{models}\DIFdelend \DIFaddbegin \DIFadd{realizations}\DIFaddend , e.g.\ the minimal ones.
 This leads to the notion of \emph{institution}. An institution
 is nothing more than a family of satisfaction systems, indexed by
 signatures, and linked coherently by signature morphisms.
-
+\ecnew
 
 \begin{definition}\label{def:inst}  Let $\Set$ be the
 category having all small \textsc{}sets as objects and functions as
@@ -6571,11 +6579,11 @@ sense that the class of \DIFdelbegin \DIFdel{models }\DIFdelend \DIFaddbegin \DI
 theory-level semantics. 
 \ec
 
-\bc{82}
+\bc{822}
  The following unifying notation is used for the two semantics of an OMS $O$: \begin{itemize} 
  \item the institution of $O$ is denoted $\Inst(O)$,
   \item the signature of $O$ is denoted $\Sig(O)$ (which is a signature in $\Inst(O)$),
-  \item the class of models of $O$ is denoted $\Mod(O)$ (which is a class of \DIFdelbegin \DIFdel{models }\DIFdelend \DIFaddbegin \DIFadd{realizations }\DIFaddend over $\Sig(O)$),
+  \item the class of \DIFdelbegin \DIFdel{models }\DIFdelend \DIFaddbegin \DIFadd{realizations }\DIFaddend of $O$ is denoted $\Mod(O)$ (which is a class of \DIFdelbegin \DIFdel{models }\DIFdelend \DIFaddbegin \DIFadd{realizations }\DIFaddend over $\Sig(O)$),
   \item the set of axioms of $O$ is denoted $\Th(O)$ (which is a set of sentences over $\Sig(O)$).
  \end{itemize}
  \ec
@@ -6609,8 +6617,8 @@ an edge from the node $S$ to the node $T$ is labeled with a pair
 $(\rho, \sigma)$ where $\rho=(\Phi,\alpha,\beta):\Inst(S)\to\Inst(T)$ is an institution comorphism and
 $\sigma:\Phi(\Sig(S))\to\Sig(T)$ is a signature morphism in $\Inst(T)$).
 The theory of a node  may be undefined, as in the case of OMS, and when it is defined,
-\bc{82}
-the class of \DIFdelbegin \DIFdel{models }\DIFdelend \DIFaddbegin \DIFadd{realizations }\DIFaddend of that node is the class of models of $\Th(N)$. 
+\bc{822}
+the class of \DIFdelbegin \DIFdel{models }\DIFdelend \DIFaddbegin \DIFadd{realizations }\DIFaddend of that node is the class of \DIFdelbegin \DIFdel{models }\DIFdelend \DIFaddbegin \DIFadd{realizations }\DIFaddend of $\Th(N)$. 
 For brevity,  the label of a node may be written as a tuple. Further, it is required that  any OMS can be assigned a unique name. 
 \ec
 
@@ -6683,7 +6691,7 @@ updating the current triple of $\Gamma$ to $(lang, logic, ser)$.
 %but possibly also
 %structured) OMS
 %$sem(L,\syntax{NativeDocument})=(\Sigma,\cM)$, where
-%$\Sigma$ is a signature and $\cM$ a class of models over $\Sigma$.
+%$\Sigma$ is a signature and $\cM$ a class of realizations over $\Sigma$.
 
 %Semantics of an OMS declaration/relation is given by a mapping \syntax{IRI}s to semantics of OMS
 % $$\Gamma: \syntax{IRI} \rightarrow (OMS \uplus OMS \times OMS \times SigMor)$$\ednote{notation(?)}
@@ -7076,13 +7084,22 @@ $sem(\Gamma, O) = (\Gamma', (\cI,\Sigma,\cM,\Delta))$.
 
 \sssclause{Semantics of basic OMS}
 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma, \syntax{BasicOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
+%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, \syntax{BasicOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
-
+\DIFaddend 
+\ecnew
 
 For a \syntax{BasicOMS} $O$ 
 in a global environment $\Gamma$, the  semantics is defined as follows:  
@@ -7103,13 +7120,22 @@ node labeled with the name of $O$, $\Gamma.logic$,$\Sigma'$, $\cM'$ and $\Delta'
 
 \sssclause{Semantics of basic OMS in a local environment}
 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{BasicOMS})& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
+%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{BasicOMS})& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
- & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
-
+\DIFaddend 
+\ecnew
 
 For a \syntax{BasicOMS} $O$ 
 in a global environment $\Gamma$ and local
@@ -7133,12 +7159,22 @@ node labeled with the name of $O$, $\Gamma.logic$,$\Sigma'$, $\cM'$ and $\Delta'
 
 \sssclause{Semantics of closable OMS}
 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma, \syntax{ClosableOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
+%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, \syntax{ClosableOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
+\DIFaddend 
+\ecnew
 
 The semantics of a \syntax{BasicOMS} has been defined above.
 
@@ -7166,12 +7202,22 @@ and
 
 \sssclause{Semantics of closable OMS in a local environment}
 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{ClosableOMS})& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
+%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{ClosableOMS})& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
- & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
+\DIFaddend 
+\ecnew
 
 The semantics of a \syntax{BasicOMS} has been defined above.
 
@@ -7199,13 +7245,23 @@ $$sem(\Gamma, (\cI, \Sigma, \cM, \Delta), O)= (\Gamma',(\cI',\Sigma',\cM', \Delt
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sssclause{Semantics of ExtendingOMS} 
- \semdom{
+\bcnew{822}
+ \DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma, \syntax{ExtendingOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
+%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array} 
+%DIFDELCMD < }
+%DIFDELCMD <  %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, \syntax{ExtendingOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array} 
 }
-
+ \DIFaddend 
+ \ecnew
+ 
 The semantics for \syntax{ClosableOMS} has been defined above.
 
 If $O$ is a  \syntax{RelativeClosureOMS},
@@ -7254,12 +7310,22 @@ category theory, see \ref{sec:colimits}.
 
 \sssclause{Semantics of ExtendingOMS in a local environment} 
 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{ExtendingOMS}))& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
+%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{ExtendingOMS}))& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
- & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
+\DIFaddend 
+\ecnew
 
 The semantics for \syntax{ClosableOMS} has been defined above.
 
@@ -7297,9 +7363,11 @@ The theory-level semantics for $O$ cannot be defined.
 
 
 
+\bcnew{822}
 The semantics of $O$
 is defined similarly for the other three alternatives of $O.\syntax{closureType}$, 
-only the model class differs:
+only the \DIFdelbegin \DIFdel{model class }\DIFdelend \DIFaddbegin \DIFadd{class of realizations }\DIFaddend differs:
+\ecnew
  \begin{itemize} 
 \item if $O.\syntax{closureType} = \syntax{maximize}$,
 $\cM'' = 
@@ -7317,12 +7385,22 @@ $\cM'' =
 
 \sssclause{Semantics of OMS}
 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma,\syntax{OMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
+%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma,\syntax{OMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
+\DIFaddend 
+\ecnew
 
 The semantics for a \syntax{ClosableOMS} has been defined above.
 
@@ -7427,7 +7505,7 @@ $$sem(\Gamma, O) = (\Gamma'',(\cI,\Sigma,\cM,\Delta))$$
 $sem(\Gamma, (\Sig(O.\syntax{oms}), \Th(O.\syntax{oms})), O.\syntax{extraction}) = 
 (\Sigma',\Delta')$.
 %which in turn amounts to stating that each $\Sigma' \cup \Sigma$-reduct
-%of a $\Mod(\Sig(O))$-model can be expanded to a $\Mod(\Sig(O))$-model
+%of a $\Mod(\Sig(O))$-realization can be expanded to a $\Mod(\Sig(O))$-realization
 %satisfying $\Th(O) \setminus \Delta'$.
 
 %Approximation
@@ -7962,12 +8040,22 @@ $sem(\Gamma,(\cI,\Sigma,\cM,\Delta), s) = (\cI, sem(\Gamma,\Sigma,s), \emptyset,
 
 \sssclause{Semantics of extension}
 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma,(\cI,\Sigma,\cM,\Delta),\syntax{Extension})& = (\Gamma',(\cI,\Sigma',\cM',\Delta'))\\
+%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma,(\cI,\Sigma,\cM,\Delta),\syntax{Extension})& = (\Gamma',(\cI,\Sigma',\cM',\Delta'))\\
- & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
 \end{array}
 }
+\DIFaddend 
+\ecnew
 
 If $e$ is an \syntax{Extension},
 $$sem(\Gamma,(\cI,\Sigma,\cM,\Delta),e)=
@@ -7985,7 +8073,7 @@ If $e.\syntax{conservativityStrength}$ is \syntax{consequence\-conservative}, th
 $\Sigma$-sentence $\varphi$, $\cM'\models\varphi$ implies $\cM\models\varphi$.
 % If
 %\syntax{ConservativityStrength} is \syntax{monomorphic}, the semantics is only
-%defined if each model in $\cM$ is the $\Sigma$-reduct of a model
+%defined if each realization in $\cM$ is the $\Sigma$-reduct of a realization
 %in $\cM'$ that is unique up to isomorphism.  
 If
 $e.\syntax{conservativityStrength}$ is \syntax{definitional}, the semantics is only
@@ -8056,7 +8144,10 @@ $O.\syntax{oms}$ in the current logic of $\Gamma$. Therefore, let $(\Gamma_0,(\c
 \noindent If $O.\syntax{conservativityStrength}$ is \syntax{model-conservative}, the semantics is only
 defined if $\cM\not=\emptyset$.\\
 If $O.\syntax{conservativityStrength}$ is \syntax{consequence-conservative}, the semantics is only
-defined if $\Delta$ has only tautologies\footnote{A tautology is a sentence holding in every model.} as signature-free\footnote{A signature-free sentence is one over the empty signature.} logical consequences.\\
+defined if $\Delta$ has only
+\bcnew{822}
+tautologies\footnote{A tautology is a sentence holding in every \DIFdelbegin \DIFdel{model}\DIFdelend \DIFaddbegin \DIFadd{realization}\DIFaddend .} as signature-free\footnote{A signature-free sentence is one over the empty signature.} logical consequences.\\
+\ecnew
 If $O.\syntax{conservativityStrength}$ is \syntax{monomorphic}, the semantics is only
 \bc{82}
 defined if $\cM$ consist of exactly one isomorphism
@@ -8070,12 +8161,22 @@ defined if $\cM$ is a singleton.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sssclause{Semantics of OMS references} 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD <  sem(\Gamma,\syntax{OMSReference})& = (\Gamma',(\cI,\Sigma,\cM,\Delta))\\
+%DIFDELCMD <  & : (LogicalEnvironment,(Institution, Signature,ModelClass, Sentences))
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma,\syntax{OMSReference})& = (\Gamma',(\cI,\Sigma,\cM,\Delta))\\
- & : (LogicalEnvironment,(Institution, Signature,ModelClass, Sentences))
+ & : (LogicalEnvironment,(Institution, Signature,RealizationClass, Sentences))
 \end{array}
 }
+\DIFaddend 
+\ecnew
 
 %%% HERE!
 
@@ -8224,9 +8325,9 @@ $L$ is the institution from the heterogeneous logical environment named by
 %%%%%
 % 13.10.14 YI
 
-%Here, for a $\Sigma$-model $M$ and s supersignature $\Sigma\leq\Sigma'$,
-%$M|^{\Sigma'}$ is the class of all $\Sigma'$-models whose $\Sigma$-reduct is $M$.
-%This naturally extends to classes of models.
+%Here, for a $\Sigma$-realization $M$ and s supersignature $\Sigma\leq\Sigma'$,
+%$M|^{\Sigma'}$ is the class of all $\Sigma'$-realizations whose $\Sigma$-reduct is $M$.
+%This naturally extends to classes of realizations.
 
 %\semdom{sem(L,\Sigma,\syntax{Reduction})=(\mu=(\Phi,\alpha,\beta),\Sigma') \mbox{ where } \Sigma'\leq\Phi(\Sigma)}
 %
@@ -8371,12 +8472,22 @@ $$sem(\Gamma,  t) = (L_1, L_2)$$
 
 \sssclause{Semantics of refinements}
 
-\semdom{
+\bcnew{822}
+\DIFdelbegin %DIFDELCMD < \semdom{
+%DIFDELCMD < \begin{array}{ll}
+%DIFDELCMD < sem(\Gamma, \syntax{Refinement})& = (((G_1, G_2), \sigma, \cM)\\
+%DIFDELCMD <  & : (OMSGraph,OMSGraph,GraphMorphism, ModelClass)
+%DIFDELCMD < \end{array}
+%DIFDELCMD < }
+%DIFDELCMD < %%%
+\DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
 sem(\Gamma, \syntax{Refinement})& = (((G_1, G_2), \sigma, \cM)\\
- & : (OMSGraph,OMSGraph,GraphMorphism, ModelClass)
+ & : (OMSGraph,OMSGraph,GraphMorphism, RealizationClass)
 \end{array}
 }
+\DIFaddend 
+\ecnew
 
 The signature of a refinement is a pair consisting of the graph of the
 OMS or network of OMS being refined and the 
@@ -9139,7 +9250,7 @@ $name_2 = 'relativized'++aName'$.
 %conditions for conservativity and relative interpretations. For each
 %logic, one needs to axiomatize a specific partial order of signatures
 %in \CL, plus a set of sentences equipped with a logical consequence
-%relation. In order to avoid the formalization of models and the
+%relation. In order to avoid the formalization of realizations and the
 %satisfaction relation (which would require the inclusion of a set theory
 %like ZFC), a sound and complete calculus is axiomatized for each logic.
 %%\ednote{TM: perhaps state a theorem about the compatibility
@@ -9375,7 +9486,7 @@ widespread than anticipated and thus such documentation is warranted.
 %
 % This reflects central issues in the structure of \DOL:
 % while \DOL, as a language, is a linguistic entity, it is
-% related to mathematical entities like logics, signatures and models
+% related to mathematical entities like logics, signatures and realizations
 % through its semantics. That is, semantic entities provide the
 % bridge bewteen linguistic and mathematical entities.
 % Moreover, processes (like theorem proving) provide algorithmic
@@ -9715,7 +9826,7 @@ Given a datatype map $D$ and a vocabulary $V$ over $D$, an interpretation $$I = 
  \end{itemize} 
 \qed\end{definition}
 
-  \bc{82}
+  \bc{822}
 The institution $\SROIQ(D)$ underlying OWL is now defined as follows:
 \begin{definition}
  \begin{itemize} 
@@ -9738,7 +9849,7 @@ on $N_{DT} \cup \{ \textit{rdfs:Literal} \}$,
 \item The sentences for a signature are definded as in
 the direct model-theoretic semantics of OWL \cite{w3c:owl2-direct-semantics}. Sentence translation is substitution of symbols.
 \item  $(D,V)$\DIFdelbegin \DIFdel{-models }\DIFdelend \DIFaddbegin \DIFadd{-realizations }\DIFaddend are interpretations for $D$ and $V$. 
-\DIFaddbegin \DIFadd{Morphisms of }\DIFaddend $(D,V)$\DIFdelbegin \DIFdel{-model morphisms }\DIFdelend \DIFaddbegin \DIFadd{-models }\DIFaddend are maps between the domains $\Delta_I$ preserving membership in classes and properties, where $\Delta_D$ is mapped identically. \DIFdelbegin \DIFdel{Model reducts }\DIFdelend \DIFaddbegin \DIFadd{Reducts of realizations }\DIFaddend are built by first translating along the signature morphism and then
+\DIFaddbegin \DIFadd{Morphisms of }\DIFaddend $(D,V)$\DIFdelbegin \DIFdel{-model morphisms }\DIFdelend \DIFaddbegin \DIFadd{-realizations }\DIFaddend are maps between the domains $\Delta_I$ preserving membership in classes and properties, where $\Delta_D$ is mapped identically. \DIFdelbegin \DIFdel{Model reducts }\DIFdelend \DIFaddbegin \DIFadd{Reducts of realizations }\DIFaddend are built by first translating along the signature morphism and then
 looking up the interpretation in the \DIFdelbegin \DIFdel{model }\DIFdelend \DIFaddbegin \DIFadd{realization }\DIFaddend to be reduced.  
 \item The satisfaction relation is defined as in direct model-theoretic semantics of OWL \cite{w3c:owl2-direct-semantics}.
  \end{itemize} 
@@ -11544,9 +11655,9 @@ is the corresponding sublogic inclusion.
   \bc{82}
 $\SimpleRDF \rightarrow \RDF$ is an obvious inclusion, except that
 \SimpleRDF resources need to be renamed if they happen to have a predefined
-meaning in \RDF. The model translation needs to forget the fixed parts
+meaning in \RDF. The \DIFdelbegin \DIFdel{model translation }\DIFdelend \DIFaddbegin \DIFadd{translation of realizations }\DIFaddend needs to forget the fixed parts
 of \RDF \DIFdelbegin \DIFdel{models}\DIFdelend \DIFaddbegin \DIFadd{realizations}\DIFaddend . Since this part can always reconstructed in a unique
-way, the result is  an isomorphic model translation. 
+way, the result is  an isomorphic \DIFdelbegin \DIFdel{model translation }\DIFdelend \DIFaddbegin \DIFadd{translation of realizations}\DIFaddend . 
 \ec
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -11578,9 +11689,11 @@ $$\top \sqsubseteq \exists U. (\exists sub. \{s\} \sqcap \exists pred. \{p\} \sq
   (u,y)\in sub^{\cal I}, (u,z,)\in obj^{\cal I} \}.$$
   $\RDF \rightarrow \SROIQ(D)$ is defined similarly. The theory of \RDF built-ins 
   is (after translation to $\SROIQ(D)$) added to any signature translation.
-  This ensures that the model translation can add the built-ins.
-%\Til{What if the OWL model satisfies more triples than the built-ins?}
-
+\bcnew{822}
+  This ensures that the \DIFdelbegin \DIFdel{model translation }\DIFdelend \DIFaddbegin \DIFadd{translation of realizations }\DIFaddend can add the built-ins.
+%\Til{What if the OWL realization satisfies more triples than the built-ins?}
+  \ecnew
+  
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \ssclause{$\OWL \rightarrow FOL$}
@@ -11677,7 +11790,7 @@ This comorphism  maps classical first-order logic (FOL) to Common Logic.
 
 %It maps constants to
 %  discourse names and function and predicate symbols to non-discourse
-%  names, with a straightforward sentence and model translation;
+%  names, with a straightforward sentence and translation of realizations;
 
 A FOL signature is translated to \Clogic.Fol by turning all constants
 into discourse names, and all other function symbols and all predicate
@@ -12490,6 +12603,7 @@ combine NetworkElements  & Alignments, Publications \\\hline
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sclause{Simple Examples in Propositional Logic}\label{ex:prop}
+\bcnew{822}
 \lstset{escapeinside = {*@}{@*}}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=prop,escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/prop#>
@@ -12513,12 +12627,12 @@ oms Inconsistent = %inconsistent
   . A /\ not A
 end
 
-oms SingleModel = %def
+oms  *@ \DIFdelbegin \DIFdel{SingleModel }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{SingleRealization }\DIFaddend @*  = %def
   props A, B
   . A /\ not B
 end
 
-entailment Ent = SingleModel entails { . not ( A=>B ) }
+entailment Ent =  *@ \DIFdelbegin \DIFdel{SingleModel }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{SingleRealization }\DIFaddend @*  entails { . not ( A=>B ) }
 end
 
 %% repeat prefix declarations from above
@@ -12536,6 +12650,7 @@ ontology Taxonomy = %consistent
   . T $\wedge$ AR $\longrightarrow$ $\bot$                   %% and so on
 end
 \end{lstlisting}
+\ecnew
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -13336,6 +13451,7 @@ end
 
 \sclause{Datatypes}\label{ex:datatypes}
 
+\bcnew{822}
 \lstset{escapeinside = {*@}{@*}}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL,escapechar=@,mathescape]
 %prefix( lang:  <http://purl.net/DOL/languages/> )%
@@ -13348,9 +13464,32 @@ spec Bag =
      sort Bag
      ops mt:Bag;
          __union__:Bag*Bag->Bag, assoc, comm, unit mt
-           }
+            *@ \DIFaddbegin }
+\DIFadd{end
+}
+
+\DIFadd{spec Bag_variant =
+  sort Elem
+then minimize }{ %DIF > % select term generated realizations
+     \DIFadd{sort Bag
+     ops mt:Bag;
+         __union__:Bag*Bag->Bag, assoc, comm, unit mt
+           }}
+\DIFadd{then	   
+  pred __elem__ : Elem * Bag
+  forall x:Elem; b1,b2:Bag
+  . not x elem mt
+  . x elem (b1 union b2) <=> (x elem b1 \/ x elem b2)
+  . b1=b2 <=> forall y:Elem . (y elem b1 <=> y elem b2) %DIF > (extensionality)%
+     %DIF > % term generatedness and extensionality together
+     %DIF > % select the standard bag realization
+end
+}
+
+\DIFadd{equivalence e : Bag <-> Bag_variant = }{\DIFaddend @*  }
 end
 \end{lstlisting}
+\ecnew
 
 \bc{90}
 \DIFadd{\lstinline[basicstyle=\ttfamily,language=dolText,alsolanguage=CASL]{spec Bag_variant =}}
@@ -14189,7 +14328,7 @@ propositional variables to nullary predicates.
   \ssclause{$\OBOOWL \rightarrow SROIQ(D)$} 
 
   $\OBOOWL \rightarrow SROIQ(D)$: signatures and sentences are
-  translated according to the OBO standard, whereas the model
+  translated according to the OBO standard, whereas the realization
   translation is the identity (due to borrowing of model theory).
 
 \ssclause{$\mathsf{OBO 1.4} \rightarrow \FOL^{=}$} 
@@ -14206,8 +14345,8 @@ signature $\mathbf{R_s}$ to the $\FOL^{=}$ signature
 $\Phi(\mathbf{R_s})$ which has $\mathbf{R_s}$ as set of constants, and
 moreover is equipped with a unary predicate $P$ and a ternary
 predicate $EXT$.  A \SimpleRDF-sentence $(sub, pred, obj)$ is translated to
-$EXT(sub, pred, obj)$.  Finally, a $\FOL^{=}$-model of
-$\Phi(\mathbf{R_s})$ is translated to the \SimpleRDF which has the model's
+$EXT(sub, pred, obj)$.  Finally, a $\FOL^{=}$-realization of
+$\Phi(\mathbf{R_s})$ is translated to the \SimpleRDF which has the realization's
 universe as set of resources $R_m$, while $P_m$ is given by the
 interpretation of $P$ and $S_m$ by the interpretation of the
 constants. $EXT_m$ can be easily constructed from the interpretation
@@ -14242,11 +14381,11 @@ respective component.
 \ssclause{$\RDF \rightarrow \FOL^{=}$} :
 
 This is a straightforward extension of $\SimpleRDF \rightarrow \RDF$,
-axiomatizing explicitly the extra conditions imposed on models. $\RDFS
+axiomatizing explicitly the extra conditions imposed on realizations. $\RDFS
 \rightarrow \FOL^{=}$ and $\RDFSOWL\rightarrow \FOL^{=}$ are
 similar. The theory of the fixed part is (after translation to
 $\FOL^{=}$) added to the translations of
-signatures. %\Til{however: what if a FOL model fulfils more triples for the fixed part than those in its theory?}
+signatures. %\Til{however: what if a FOL realization fulfils more triples for the fixed part than those in its theory?}
 
 \ssclause{$\FOL^{ms =} \rightarrow \FOL^{=}$} 
 
@@ -14256,7 +14395,7 @@ unary predicate (these are called sort predicates), and each function
 and predicate symbol is translated by erasing its typing information
 in the signature, while turning it into a sentence, using the sort
 predicates. A sentence is translated by erasing the type information
-and relativizing quantifiers to the sort predicates. A model is
+and relativizing quantifiers to the sort predicates. A realization is
 translated by turning the interpretations of sort predicates into
 carrier sets, and keeping functions and predicates.
 
@@ -14277,7 +14416,7 @@ $I_\rightarrow$ etc.\ over the natural numbers.
 \ssclause{$\Clogic \rightarrow \CASL$} 
 
 This institution comorphism specifies the theory of lists and the
-implicit components of \Clogic models explicitly in \CASL.
+implicit components of \Clogic realizations explicitly in \CASL.
 
 \ssclause{$\CASL\rightarrow \HOL$} 
 
@@ -14292,15 +14431,15 @@ are specified in $\FOL^{=}$\footnote{Strictly speaking, for a complete
   specification of inductive datatypes, second-order logic is needed;
   in this case, the translation ends in $\HOL$.}. Integrity
 constraints are expressible as first-order sentences, and given a
-first-order model, its predicates are construed as database tables.
+first-order realization, its predicates are construed as database tables.
 
 \ssclause{$\Prop\rightarrow \FOL^{=}$} 
 
 This translates propositional variables to nullary predicates. The
-model translation forgets the universe (and is hence not an
+translation of realizations forgets the universe (and is hence not an
 isomorphism). A theoroidal variant adds (to the signature translation)
 the axiom $\forall x,y\,.\, x=y$ enforcing a singleton universe (then,
-the model translation is at least an equivalence of categories).
+the translation of realizations is at least an equivalence of categories).
 
 \ssclause{$\Prop\rightarrow \Clogic$}
 
@@ -14316,7 +14455,7 @@ that the domain consists of a single point.  A propositional sentence
 membership of $a$ in the corresponding SROIQ(D) class term (i.e.\ a
 Boolean combination of atomic classes)---note that this can be
 expressed either as ABox statement $a:C$ or as TBox statement
-$\{a\}\subseteq C$. In order to translate an SROIQ(D) model, for each
+$\{a\}\subseteq C$. In order to translate an SROIQ(D) realization, for each
 atomic class $A$ (resulting from a propositional variable $A$), $a:A$
 is evaluated, and the result is assigned to the propositional variable
 $A$.  The satisfaction condition is straightforward.
@@ -14325,7 +14464,7 @@ $A$.  The satisfaction condition is straightforward.
 
 The signature translation maps constants, function symbols and
 predicates to names. Sentences are left untouched. From a
-\Clogic-model, it is possible to extract a $\FOL^{=}$-model by
+\Clogic-realization, it is possible to extract a $\FOL^{=}$-realization by
 restricting functions and predicates to those sequences that have the
 length of the arity of the symbol (note that this restriction is the
 reason for not getting an isomorphism).
