repaired other diffs for issue 82

--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -7085,20 +7085,12 @@ $sem(\Gamma, O) = (\Gamma', (\cI,\Sigma,\cM,\Delta))$.
 \sssclause{Semantics of basic OMS}
 
 \bcnew{822}
-\DIFdelbegin %DIFDELCMD < \semdom{
-%DIFDELCMD < \begin{array}{ll}
-%DIFDELCMD <  sem(\Gamma, \syntax{BasicOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
-%DIFDELCMD <  & : (LogicalEnvironment, (Institution,Signature,ModelClass, Sentences))
-%DIFDELCMD < \end{array}
-%DIFDELCMD < }
-%DIFDELCMD < %%%
-\DIFdelend \DIFaddbegin \semdom{
+\semdom{
 \begin{array}{ll}
  sem(\Gamma, \syntax{BasicOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array}
 }
-\DIFaddend 
 \ecnew
 
 For a \syntax{BasicOMS} $O$ 
@@ -7131,7 +7123,7 @@ node labeled with the name of $O$, $\Gamma.logic$,$\Sigma'$, $\cM'$ and $\Delta'
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{BasicOMS})& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array}
 }
 \DIFaddend 
@@ -7170,7 +7162,7 @@ node labeled with the name of $O$, $\Gamma.logic$,$\Sigma'$, $\cM'$ and $\Delta'
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, \syntax{ClosableOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array}
 }
 \DIFaddend 
@@ -7213,7 +7205,7 @@ and
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{ClosableOMS})& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array}
 }
 \DIFaddend 
@@ -7256,7 +7248,7 @@ $$sem(\Gamma, (\cI, \Sigma, \cM, \Delta), O)= (\Gamma',(\cI',\Sigma',\cM', \Delt
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, \syntax{ExtendingOMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array} 
 }
  \DIFaddend 
@@ -7321,7 +7313,7 @@ category theory, see \ref{sec:colimits}.
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma, (\cI, \Sigma, \cM, \Delta), \syntax{ExtendingOMS}))& = (\Gamma',(\cI',\Sigma',\cM', \Delta'))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array}
 }
 \DIFaddend 
@@ -7396,7 +7388,7 @@ $\cM'' =
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma,\syntax{OMS})& = (\Gamma',(\cI,\Sigma,\cM, \Delta))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array}
 }
 \DIFaddend 
@@ -8051,7 +8043,7 @@ $sem(\Gamma,(\cI,\Sigma,\cM,\Delta), s) = (\cI, sem(\Gamma,\Sigma,s), \emptyset,
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma,(\cI,\Sigma,\cM,\Delta),\syntax{Extension})& = (\Gamma',(\cI,\Sigma',\cM',\Delta'))\\
- & : (LogicalEnvironment, (Institution,Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment, (Institution,Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array}
 }
 \DIFaddend 
@@ -8146,6 +8138,7 @@ defined if $\cM\not=\emptyset$.\\
 If $O.\syntax{conservativityStrength}$ is \syntax{consequence-conservative}, the semantics is only
 defined if $\Delta$ has only
 \bcnew{822}
+\DIFadd{[diff note: only footnote has changed]}
 tautologies\footnote{A tautology is a sentence holding in every \DIFdelbegin \DIFdel{model}\DIFdelend \DIFaddbegin \DIFadd{realization}\DIFaddend .} as signature-free\footnote{A signature-free sentence is one over the empty signature.} logical consequences.\\
 \ecnew
 If $O.\syntax{conservativityStrength}$ is \syntax{monomorphic}, the semantics is only
@@ -8172,7 +8165,7 @@ defined if $\cM$ is a singleton.
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
  sem(\Gamma,\syntax{OMSReference})& = (\Gamma',(\cI,\Sigma,\cM,\Delta))\\
- & : (LogicalEnvironment,(Institution, Signature,RealizationClass, Sentences))
+ & : (LogicalEnvironment,(Institution, Signature,\text{\DIFdel{ModelClass}}\DIFadd{RealizationClass}, Sentences))
 \end{array}
 }
 \DIFaddend 
@@ -8483,7 +8476,7 @@ $$sem(\Gamma,  t) = (L_1, L_2)$$
 \DIFdelend \DIFaddbegin \semdom{
 \begin{array}{ll}
 sem(\Gamma, \syntax{Refinement})& = (((G_1, G_2), \sigma, \cM)\\
- & : (OMSGraph,OMSGraph,GraphMorphism, RealizationClass)
+ & : (OMSGraph,OMSGraph,GraphMorphism, \text{\DIFdel{ModelClass}}\DIFadd{RealizationClass})
 \end{array}
 }
 \DIFaddend 
@@ -9826,7 +9819,6 @@ Given a datatype map $D$ and a vocabulary $V$ over $D$, an interpretation $$I = 
  \end{itemize} 
 \qed\end{definition}
 
-  \bc{822}
 The institution $\SROIQ(D)$ underlying OWL is now defined as follows:
 \begin{definition}
  \begin{itemize} 
@@ -9848,12 +9840,13 @@ on $N_{DT} \cup \{ \textit{rdfs:Literal} \}$,
  \end{itemize} 
 \item The sentences for a signature are definded as in
 the direct model-theoretic semantics of OWL \cite{w3c:owl2-direct-semantics}. Sentence translation is substitution of symbols.
+  \bc{822}
 \item  $(D,V)$\DIFdelbegin \DIFdel{-models }\DIFdelend \DIFaddbegin \DIFadd{-realizations }\DIFaddend are interpretations for $D$ and $V$. 
 \DIFaddbegin \DIFadd{Morphisms of }\DIFaddend $(D,V)$\DIFdelbegin \DIFdel{-model morphisms }\DIFdelend \DIFaddbegin \DIFadd{-realizations }\DIFaddend are maps between the domains $\Delta_I$ preserving membership in classes and properties, where $\Delta_D$ is mapped identically. \DIFdelbegin \DIFdel{Model reducts }\DIFdelend \DIFaddbegin \DIFadd{Reducts of realizations }\DIFaddend are built by first translating along the signature morphism and then
 looking up the interpretation in the \DIFdelbegin \DIFdel{model }\DIFdelend \DIFaddbegin \DIFadd{realization }\DIFaddend to be reduced.  
+ \ec
 \item The satisfaction relation is defined as in direct model-theoretic semantics of OWL \cite{w3c:owl2-direct-semantics}.
  \end{itemize} 
- \ec
  \qed\end{definition}
 
 
@@ -12603,7 +12596,6 @@ combine NetworkElements  & Alignments, Publications \\\hline
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \sclause{Simple Examples in Propositional Logic}\label{ex:prop}
-\bcnew{822}
 \lstset{escapeinside = {*@}{@*}}
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=prop,escapechar=@,mathescape]
 %prefix( :      <http://www.example.org/prop#>
@@ -12626,7 +12618,11 @@ oms Inconsistent = %inconsistent
   props A
   . A /\ not A
 end
+\end{lstlisting}
 
+\bcnew{822}
+\lstset{escapeinside = {*@}{@*}}
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=prop,escapechar=@,mathescape]
 oms  *@ \DIFdelbegin \DIFdel{SingleModel }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{SingleRealization }\DIFaddend @*  = %def
   props A, B
   . A /\ not B
@@ -12634,7 +12630,11 @@ end
 
 entailment Ent =  *@ \DIFdelbegin \DIFdel{SingleModel }\DIFdelend @*   *@ \DIFaddbegin \DIFadd{SingleRealization }\DIFaddend @*  entails { . not ( A=>B ) }
 end
+\end{lstlisting}
+\ecnew
 
+\lstset{escapeinside = {*@}{@*}}
+\begin{lstlisting}[basicstyle=\ttfamily,language=dolText,alsolanguage=prop,escapechar=@,mathescape]
 %% repeat prefix declarations from above
 
 library PropositionalMereology
@@ -12650,7 +12650,6 @@ ontology Taxonomy = %consistent
   . T $\wedge$ AR $\longrightarrow$ $\bot$                   %% and so on
 end
 \end{lstlisting}
-\ecnew
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
