--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -2567,7 +2567,7 @@ See section~\ref{dist-het-onto}.
   \termref{OMS translation} and \termref{OMS reduction}.}
 
 \bc{82}
-\\termdefinition{embedding}{\termref{logic mapping} that embeds the
+\termdefinition{embedding}{\termref{logic mapping} that embeds the
   source into the target logic, using components that are embeddings
   and (in the case of translations of \DIFdel{models}\DIFadd{realizations}) isomorphism.}
 \ec
