--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -2929,10 +2929,11 @@ Annex~\ref{a:tools} gives an overview of available  software tools for
 linked-data compliant IRI scheme used in one of these tools
 (\emph{informative}).
 
-\medskip \noindent 
-The bibliography contains \ref{a:bibliography} references to the literature that is cited in this document
+\medskip \noindent
+\bcnew{37}
+The bibliography \DIFdelbegin \DIFdel{contains \ref{a:bibliography}}\DIFdelend \DIFaddbegin \DIFadd{(Annex~\ref{a:bibliography}) contains }\DIFaddend references to the literature that is cited in this document
 (\emph{informative}).
-
+\ecnew
 
 %\sclause{About this Specification}
 
