--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -4966,7 +4966,7 @@ Conservative       ::= '%cons'
 \ecnew
 
 \bc{92}
-\lstset{escapeinside = {*@}{@*}}
+\lstset{escapeinside = {@}{@}}
 \begin{lstlisting}[language=ebnf,mathescape]
 InterfaceSignature ::= SymbolList
 ImportName         ::= '%@\DIFadd{(}@' IRI '@\DIFadd{)}@%'
