--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -13456,7 +13456,7 @@ then
     vars a, b, c:Elem
     . (a + c) <= (b + c) if a <= b              %(FWO_plus_left)%
     . (a * c) <= (b * c) if a <= b /\ 0 <= c;   %(FWO_times_left)%
-then %implies
+then %implied
     vars a, b, c, d: Elem
     . (a + b) <= (a + c) if b <= c              %(FWO_plus_right)%
     . (a * b) <= (a * c) if b <= c /\ 0 <= a    %(FWO_times_right)%
