--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -610,7 +610,7 @@ author=,date=,id=,replyto=,type=}{}%
 
 
 \begin{flushright}
-  \textbf{Date:} August 2017 
+  \textbf{Date:} November 2017 
 \end{flushright}
 
 \begin{flushleft}
@@ -641,13 +641,13 @@ author=,date=,id=,replyto=,type=}{}%
 \vskip 6pt 
 \nointerlineskip
 \begin{onehalfspace}
-\textsf{\textbf{OMG Document Number: ptc/2017-08-02}}    \\  %ad/2015-08-01 ad/2015-05-03 ad/15-06-04
+\textsf{\textbf{OMG Document Number: ptc/2017-11-08}}    \\  
 \textsf{\textbf{Standard document URL: \ \url{http://www.omg.org/spec/DOL/1.0/PDF}}} \\
 \textsf{\textbf{Machine Consumable File(s): \\ 
 \leftskip2em Normative:  \\
 \url{http://www.omg.org/spec/DOL/20151109/DOL-metamodel.xmi}\\
 Informative: \\
-\url{http://www.omg.org/spec/DOL/20151109/DOL-terms.rdf} \\}}
+\url{http://www.omg.org/spec/DOL/20171106/DOL-terms.rdf} \\}}
 \end{onehalfspace} 
 
 \vskip 28pt
