--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -5233,15 +5233,13 @@ GeneralizedTerm    ::= Symbol
 Relation           ::= RelationReference | StandardRelation
 RelationReference  ::= IRI
 \end{lstlisting}
-\bc{92}
 \begin{lstlisting}[language=ebnf,mathescape,escapeinside={*@}{@*}]
 StandardRelation   ::= '>' | '<' | '=' | '%' | 'ni' | 'in'
                        *@$<$ \rm No keyword corresponding to @*default-relation*@ \rm as this is just the default if@*
-                       *@\phantom{$<$ }@*Relation*@ \rm is omitted\DIFadd{~}$>$@*
+                       *@\phantom{$<$ }@*Relation*@ \rm is omitted~$>$@*
 Confidence         ::= Double
 Double             ::= *@$<$ a number $\in [0,1]$ $>$@*
 \end{lstlisting}
-\ec
 %~\CLnote{some text that was left over here, but I don't recall what we meant by it: recommendations for dealing with OMS language dialects}
 
 
@@ -5460,7 +5458,6 @@ within the \DOL library.
 \ssclause{Concrete Syntax}\label{c:curie-syntax}
 
 \vspace{-1.4em}
-\bc{92}
 \begin{lstlisting}[language=ebnf,escapeinside={@@}]
 
 IRI           ::= '<' FullIRI '>' | CURIE
@@ -5472,11 +5469,10 @@ StringWithComma ::= UChar* ',' UChar*
 UChar         ::= @$<$ any Unicode \nref{UCS} character $>$@ 
 Prefix        ::= NCName ':'@$<$ \rm see ``NCName'' in \nref{XMLns}, Section 3 $>$@
 Reference     ::= Path [Query] [Fragment]
-Path          ::= ipath-absolute | ipath-rootless | ipath-empty @$<$\rm{}\DIFadd{~}as defined in \nref{IRI} $>$@
-Query         ::= '?' iquery@\DIFadd{~}$<$\rm{} as defined in \nref{IRI} $>$@
-Fragment      ::= '#' ifragment@\DIFadd{~}$<$\rm{} as defined in \nref{IRI} $>$@
+Path          ::= ipath-absolute | ipath-rootless | ipath-empty @$<$\rm{}~as defined in \nref{IRI} $>$@
+Query         ::= '?' iquery@~$<$\rm{} as defined in \nref{IRI} $>$@
+Fragment      ::= '#' ifragment@~$<$\rm{} as defined in \nref{IRI} $>$@
 \end{lstlisting}
-\ec
 
 In a CURIE without a prefix, the \syntax{reference} part is \notallowed to match any of the keywords of the \DOL syntax (cf.\ clause \ref{c:keywords}).
 
@@ -12165,12 +12161,10 @@ ExcludedElementRef  ::= IRI
 \sclause{OMS}
 
 % Corresponds to image mof/oms.png and mof/basic_oms.png
-\bc{92}
 \begin{lstlisting}[language=ebnf,escapeinside={@@}]  % abstract syntax
 
-BasicOMS           ::= @$<$\DIFadd{~}@language specific@\DIFadd{~}$>$@ 
+BasicOMS           ::= @$<$~@language specific@~$>$@ 
 \end{lstlisting}
-\ec
 \begin{lstlisting}[language=ebnf,escapeinside={@@}]  % abstract syntax
 OMS                ::= ExtendingOMS
                      | ClosureOMS
@@ -12474,7 +12468,7 @@ in Fig.~\ref{fig:queries}.
 \bc{92}
 \begin{lstlisting}[language=ebnf,escapeinside={@@},mathescape]
 
-Term               ::= @$<$\DIFadd{~}@an expression specific to an OMS language@\DIFadd{~}$>$@ 
+Term               ::= @$<$~@an expression specific to an OMS language@~$>$@ 
 GeneralizedTerm    ::= Term | Symbol
 QueryRelatedDefinition ::= QueryDefinition
                      | SubstitutionDefinition
@@ -12502,7 +12496,6 @@ Vars               ::= Symbol @\DIFadd{(}@ ',' Symbol @\DIFadd{)}@*
 \sclause{EBNF Abstract Syntax}
 
 
-\bc{92}
 \begin{lstlisting}[language=ebnf,escapeinside={@@},mathescape]  % abstract syntax
 
 QueryRelatedDefinition ::= QueryDefinition
@@ -12517,7 +12510,7 @@ SubstitutionDefinition ::= substitution-definition
 ResultDefinition   ::= result-definition ResultName
                                          SubstitutionName SubstitutionName*
                                          QueryName [Complete]
-Sentence           ::= @$<$\DIFadd{~}@an expression specific to an OMS language@\DIFadd{~}$>$@ 
+Sentence           ::= @$<$~@an expression specific to an OMS language@~$>$@ 
 OMS                ::= @$\ldots$@ | application  OMS  SubstitutionName 
 QueryName          ::= IRI
 SubstitutionName   ::= IRI
@@ -12525,7 +12518,6 @@ ResultName         ::= IRI
 Vars               ::= Symbol*
 Complete           ::= complete
 \end{lstlisting}
-\ec
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
