added link for uml xmi file to title page

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -647,7 +647,9 @@ author=,date=,id=,replyto=,type=}{}%
 \leftskip2em Normative:  \\
 \url{http://www.omg.org/spec/DOL/20151109/DOL-metamodel.xmi}\\
 Informative: \\
-\url{http://www.omg.org/spec/DOL/20171106/DOL-terms.rdf} \\}}
+\url{http://www.omg.org/spec/DOL/20171106/DOL-terms.rdf} \\
+\url{http://www.omg.org/spec/DOL/20171106/DOL-terms.xml} \\
+}}
 \end{onehalfspace} 
 
 \vskip 28pt
