--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -3171,6 +3171,7 @@ import. In the result, both the \OWL and the FOL axioms are amenable to, e.g., a
 checking and theorem proving. Hence, all available information can be used in the reasoning process.
 For example, the ontology below extends the \OWL definition of \texttt{isProperPartOf} as an asymmetric relation
 with a first-order axiom (in Common Logic) asserting that the relation is also transitive.
+\bcnew{38}
 \lstset{escapeinside = {*@}{@*}}
   \begin{lstlisting}[basicstyle=\small\ttfamily,language=dolText,alsolanguage=clif,alsolanguage=owl2Manchester,escapechar=@,mathescape]
 %prefix( lang:  <http://purl.net/DOL/languages/>
@@ -3193,6 +3194,7 @@ then @\DIFdel{language lang:CommonLogic :}@
         (isProperPartOf x z))
 @\DIFadd{end}@
 \end{lstlisting}
+\ecnew  
 \OWL can express transitivity, but not together with asymmetry.
 
 
